# tf2-bot-kicker-gui

./: .gitignore  Cargo.toml  README.md  build.sh  dependencies.txt  profile.sh  todo.txt
cfg/: biglist.json  milenko-cumulative.json  playerlist.json  players.json  recorded_bots.txt  regx (copy).txt  regx.txt  steamids.txt
glium_app/: Cargo.toml
glium_app/src/: context.rs  lib.rs  timer.rs
glium_app/src/io/: keyboard.rs  mouse.rs
src/: app.rs  command_manager.rs  gui.rs  io.rs  logwatcher.rs  main.rs  player_checker.rs  regexes.rs  ringbuffer.rs  server.rs  settings.rs  state.rs  steamapi.rs  timer.rs  version.rs
src/app/: bot_checker.rs  console.rs  log_watcher.rs  logwatcher.rs  regexes.rs  server.rs  settings.rs  timer.rs
src/app/console/: commander.rs  log_watcher.rs
src/app/server/: player.rs
src/gui/: chat_window.rs  player_windows.rs  regex_windows.rs
src/io/: command_manager.rs  logwatcher.rs  regexes.rs
src/server/: parties.rs  player.rs
