[package]
name = "tf2-bot-kicker-gui"
version = "0.1.0"
edition = "2021"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcon = { version = "0.6.0", features = ["rt-tokio"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.52"

glium = "0.31"
glium_app = { git = "https://github.com/Googe14/glium-app" }
egui = "0.17.0"
egui-winit = { version = "0.17.0", default-features = false }
egui_glium = { version = "0.17.0", default-features = false, features = ["clipboard", "epi", "links"]}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.73"
json = "0.12.4"

chrono = "0.4.19"
rfd = "0.6.3"
clipboard = "0.5.0"
regex = "1.5.4"

log = "*"
env_logger = "*"
image = "0.24.2"