[package]
name = "glium_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.31.0"

tokio = { version = "1", features = ["full"] }
async-trait = "0.1.52"

egui = "0.16.0"
egui-winit = { version = "0.16.0", default-features = false }
egui_glium = { version = "0.16.0", default-features = false, features = ["clipboard", "epi", "links"]}